# A-Quantitative-Approach-to-the-NL-SWE-world-cup-match

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: aliases.yaml  config.yaml  wc2026_fixtures.csv
notebooks/: 01_eda.ipynb
reports/: BETS.md
src/nlvswe/: __init__.py  _dummy.py  config.py  io.py  logging.py  repro.py  schemas.py
src/nlvswe/betting/: __init__.py  bankroll.py  clv.py  run.py  strategy.py
src/nlvswe/eval/: __init__.py  backtest.py  calibration.py  market.py  report.py  scoring.py
src/nlvswe/features/: __init__.py  build.py  conditions.py  ratings.py
src/nlvswe/plotting/: __init__.py  eda.py  theme.py
src/nlvswe/ratings/: __init__.py  elo.py
tests/: test_acquire.py  test_betting.py  test_clean.py  test_eval.py  test_features.py  test_foundation.py  test_models.py
tests/fixtures/: elo_world_sample.tsv  fifa_ranking_sample.csv  football_data_sample.csv  odds_live_sample.json  results_sample.csv
