[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlvswe"
version = "0.1.0"
description = "Quantitative analysis: Netherlands vs Sweden (FIFA World Cup 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "pandera>=0.18",
    "pydantic>=2.5",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "pymc>=5.10",
    "arviz>=0.17",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "joblib>=1.3",
    "tqdm>=4.66",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
